# snix-vmm

./: .gitignore  .gitmodules  readme.md
docs/: ARCHITECTURE.md  SERVER.md
vmm/: Cargo.toml
vmm/cvm_cfg_builder/: Cargo.toml
vmm/cvm_controller/: Cargo.toml
vmm/cvm_controller/src/: lib.rs
vmm/cvm_gui/: Cargo.toml
vmm/cvm_gui/src/: lib.rs
vmm/cvm_server/: Cargo.toml
vmm/cvm_server/src/: lib.rs  server.rs  server_socket.rs
vmm/cvm_server/src/vm_jail/: mod.rs
vmm/cvm_vm/: Cargo.toml
vmm/cvm_vm/src/: lib.rs  snix.rs  vm.rs
vmm/src/: main.rs
